--- a/src/components/gallery/gallery.module.css
+++ b/src/components/gallery/gallery.module.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 }
 
 .fields {
@@ -57,11 +58,14 @@
 }
 
 .messageInvalid {
+  width: 100%;
   color: red;
+  text-align: center;
 }
 
 .btn {
   padding: 10px 20px;
+  cursor: pointer;
 }
 
 .btnAdd {
