--- a/src/components/gallery/gallery.module.css
+++ b/src/components/gallery/gallery.module.css
@@ -1,5 +1,5 @@
 .gallery {
-  width: 1000px;
+  width: 920px;
   margin-left: auto;
   margin-right: auto;
 
@@ -7,14 +7,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 30px;
 
   padding: 20px;
 }
 
 .form {
   width: 500px;
-  padding: 40px;
+  padding: 30px;
   border: 2px solid gray;
   border-radius: 10px;
 
@@ -79,7 +79,14 @@
 
 .content {
   min-width: 100%;
-  min-height: 200px;
+  min-height: 100px;
+
+  padding: 30px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  /* justify-content: space-between; */
 
   border: 2px solid gray;
   border-radius: 5px;
